--- a/frontend/src/Components/Cards/NutrientCard.scss
+++ b/frontend/src/Components/Cards/NutrientCard.scss
@@ -1,16 +1,20 @@
 
 .card{
 
-  width: 175px;
+  width: 170px;
   height: 60px;
+
+  padding:2rem;
 
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-evenly;
-  align-content: flex-start;
+  align-content: center;
 
   text-align: start;
+
+  background-color: #fbfbfb;
 }
 .iconContainer{
 
@@ -49,7 +53,6 @@
 .nutrient{
   font-size: 14px;
   line-height: 24px;
-  font-weight: 500;
   color: rgba(black,0.5);
 
   margin: 0;
