--- a/frontend/src/Components/Greetings/Greetings.scss
+++ b/frontend/src/Components/Greetings/Greetings.scss
@@ -1,11 +1,11 @@
 .greetings-section{
-  margin: 1rem 0 0;
+  margin: 0 0;
   width: 100%;
 }
 .welcome{
   font-size: 48px;
 
-  margin: 0;
+  margin: 0 0 2rem;
   em{
     color: red;
     font-style: normal;
