--- a/frontend/src/Components/TopNav/TopNav.scss
+++ b/frontend/src/Components/TopNav/TopNav.scss
@@ -36,7 +36,7 @@ nav{
       display: flex;
       align-items: center;
       font-weight: 500;
-      color: #E60000 ;
+      color: rgb(230, 0, 0) ;
   
     }
   
@@ -51,8 +51,14 @@ nav{
   option{
     background-color: black;
     color: white;
+    font-size: 24px;
+    max-width: 100%;
     padding: 0;
     margin: 0;
+    width: min-content;
+    min-height: none !important;
+    position: relative;
+    top: 3rem;
   }
 
   select{
@@ -61,4 +67,5 @@ nav{
     color: white;
     font-family: system-ui, Roboto;
     border: 0;
+    width: min-content;
   }
