--- a/frontend/src/Pages/Dashboard.scss
+++ b/frontend/src/Pages/Dashboard.scss
@@ -5,7 +5,7 @@ main{
   width: 85vw;
   display: flex;
   flex-wrap: wrap;
-  align-content: flex-start;
+  align-content: center;
   justify-content: space-between;
   position: fixed;
   right: 0;
@@ -36,7 +36,3 @@ main{
   width: 32%;
   height: min-content;
 } 
-
-.card{
-  margin : 0 ;
-}
